styling fix for left aligned admin sub menus

--- a/wp-content/themes/makerfaire/less/header.less
+++ b/wp-content/themes/makerfaire/less/header.less
@@ -132,7 +132,7 @@
 		margin-left: 0;
 		margin-right: -1px;
    }
-	li .ab-item {
+	li.menupop>.ab-item {
 		padding-left: 20px;
 		&:before {
 			left: 4px;
